@@ -22,6 +22,7 @@ public class AnalogousSearchTest
 {
     private AnalogousSearch search;
     private final File outDir = new File("testing/output");
+    private int corpusSize;
 
     @Before
     public void setup() throws IOException
@@ -33,8 +34,9 @@ public class AnalogousSearchTest
                 true, "http://www.wikipedia.org/", "http://dbpedia.org/");
         indexWriter.performIO();
 
+        this.corpusSize = indexWriter.loadedTables();
         this.search = new AnalogousSearch(indexWriter.getEntityLinker(), indexWriter.getEntityTable(), indexWriter.getEntityTableLinker(),
-                5, 1, false, null, true, false,
+                10000, 1, false, null, true, false,
                 true, false, false, AnalogousSearch.SimilarityMeasure.EUCLIDEAN,
                 null);
     }
@@ -45,8 +47,8 @@ public class AnalogousSearchTest
         Table<String> query = new SimpleTable<>(List.of(List.of("http://dbpedia.org/resource/1963_Formula_One_season",
                 "http://dbpedia.org/resource/Team_Lotus")));
         Result result = this.search.search(query);
-        assertEquals(5, result.getK());
-        assertEquals(5, result.getSize());
+        assertEquals(10000, result.getK());
+        assertEquals(this.corpusSize, result.getSize());
 
         List<Pair<String, Double>> resultList = new ArrayList<>(result.getSize());
         Iterator<Pair<String, Double>> resultIter = result.getResults();
@@ -56,8 +58,8 @@ public class AnalogousSearchTest
             resultList.add(resultIter.next());
         }
 
-        assertEquals(5, resultList.size());
-        assertEquals("testing/output/table-0072-223.json", resultList.get(0).getFirst());
+        assertEquals(this.corpusSize, resultList.size());
+        assertEquals("table-0072-223.json", resultList.get(0).getFirst());
     }
 
     @Test
@@ -67,8 +69,8 @@ public class AnalogousSearchTest
                 "http://dbpedia.org/resource/Montreal_Canadiens"),
                 List.of("http://dbpedia.org/resource/St._Louis_Blues", "http://dbpedia.org/resource/California_Golden_Seals")));
         Result result = this.search.search(query);
-        assertEquals(5, result.getK());
-        assertEquals(5, result.getSize());
+        assertEquals(10000, result.getK());
+        assertEquals(this.corpusSize, result.getSize());
 
         List<Pair<String, Double>> resultList = new ArrayList<>(result.getSize());
         Iterator<Pair<String, Double>> resultIter = result.getResults();
@@ -78,8 +80,8 @@ public class AnalogousSearchTest
             resultList.add(resultIter.next());
         }
 
-        assertEquals(5, resultList.size());
-        assertEquals("testing/output/table-0314-885.json", resultList.get(0).getFirst());
+        assertEquals(this.corpusSize, resultList.size());
+        assertEquals("table-0314-885.json", resultList.get(0).getFirst());
     }
 
     @Test
@@ -89,7 +91,7 @@ public class AnalogousSearchTest
                 List.of("http://dbpedia.org/resource/Maemo"), List.of("http://dbpedia.org/resource/BlackBerry_10")));
         Result result = this.search.search(query);
         assertEquals(5, result.getK());
-        assertEquals(5, result.getSize());
+        assertEquals(this.corpusSize, result.getSize());
 
         List<Pair<String, Double>> resultList = new ArrayList<>(result.getSize());
         Iterator<Pair<String, Double>> resultIter = result.getResults();
@@ -99,8 +101,8 @@ public class AnalogousSearchTest
             resultList.add(resultIter.next());
         }
 
-        assertEquals(5, resultList.size());
-        assertEquals("testing/output/table-0782-820.json", resultList.get(0).getFirst());
-        assertEquals(0.92, resultList.get(0).getSecond(), 0.01);    // Score should be 0.923
+        assertEquals(this.corpusSize, resultList.size());
+        assertEquals("table-0782-820.json", resultList.get(0).getFirst());
+        assertEquals(1.0, resultList.get(0).getSecond(), 0.01);    // Score should be 0.923
     }
 }
